어드민 누락 수정

--- a/admin/payment-detail-member.html
+++ b/admin/payment-detail-member.html
@@ -110,10 +110,12 @@
                         <label class="heading small" for="txt7">결제 상태</label>
                         <div class="input-btn2 mt10">
                           <select class="select type2" name="" id="txt7">
+                            <option value="" selected="">입금대기</option>
                             <option value="" selected="">결제완료</option>
                             <option value="">결제취소</option>
-                            <option value="">가상결제진행중</option>
-                            <option value="">결제진행중</option>
+                            <option value="">배송준비중</option>
+                            <option value="">배송중</option>
+                            <option value="">배송완료</option>
                           </select>
                         </div>
                       </div>
