--- a/admin/payment-detail-nonmember.html
+++ b/admin/payment-detail-nonmember.html
@@ -114,10 +114,12 @@
                         <label class="heading small" for="txt7">결제 상태</label>
                          <div class="input-btn2 mt10">
                           <select class="select type2" name="" id="txt7">
-                            <option value="DONE" selected="">결제완료</option>
+                            <option value="DONE">입금대기</option>
+                            <option value="DONE" selected>결제완료</option>
                             <option value="DONE">결제취소</option>
-                            <option value="DONE">가상결제진행중</option>
-                            <option value="DONE">결제진행중</option>
+                            <option value="DONE">배송준비중</option>
+                            <option value="DONE">배송중</option>
+                            <option value="DONE">배송완료</option>
                           </select>
                         </div>
                       </div>
