어드민 상세 주소 인풋 수정 (두개로 분리)

--- a/admin/payment-detail-present-nonmember.html
+++ b/admin/payment-detail-present-nonmember.html
@@ -70,7 +70,8 @@
                       </div>
                       <div class="px24 pt14">
                         <label class="heading small" for="txt4">주소</label>
-                        <input class="input-type1" id="txt4" type="text" name="" value="서울시 성북구 동소문로 20가길 3098 401호" disabled>
+                        <input class="input-type1" id="txt4" type="text" name="" value="서울시 성북구 동소문로 20가길 3098" disabled>
+                        <input class="input-type1" id="txt4" type="text" name="" value="401호" disabled>
                       </div>
                     </div>
                   </div>
