--- a/admin/user-detail.html
+++ b/admin/user-detail.html
@@ -70,7 +70,8 @@
                   </div>
                   <div class="pr24 pt14">
                     <label class="heading small" for="txt4">주소</label>
-                    <input class="input-type1" id="txt4" name="" type="text" value="서울시 성북구 동선동 3가 2554-12 602호">
+                    <input class="input-type1" id="txt4" name="" type="text" value="서울시 성북구 동선동 3가">
+                    <input class="input-type1" id="" name="" type="text" value="2554-12 602호">
                   </div>
       
                 </div>
