--- a/html/apply-ticket-present.html
+++ b/html/apply-ticket-present.html
@@ -20,7 +20,7 @@
     <div class="wrap">
         <div class="input-wrap">
             <!-- <p class="phrase">함께 걸어요 My5k</p> -->
-            <h2>참가권 신청</h2>
+            <h2>참가권 선물</h2>
             <div class="input-wrap__subtitle pb32">구매자 정보</div>
             <label class="label pb8" for="txt1"><span class="essential">*</span>이름</label>
             <input class="input mb32" id="txt1" type="text" placeholder="이름을 입력해주세요.">
