--- a/html/apply-ticket.html
+++ b/html/apply-ticket.html
@@ -12,6 +12,7 @@
     <script src="../js/custom.js"></script>
     <script src="../js/counter.min.js"></script>
     <script src="../js/about.js"></script>
+    <script src="../js/counter.js" defer></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
@@ -71,49 +72,70 @@
             <label class="label pb8" for="txt5">휴대폰 번호</label>
             <input class="input mb32" id="txt5" type="text" placeholder="이름을 입력해주세요.">
             <label class="label pb8" for="txt6">티셔츠 사이즈</label>
-            
-            <div class="container-fluid mb-5">
-                <div class="row">
-                  <div class="col-xl-6 offset-xl-3 px-0">
-                        <label class="card-radio-btn">
-                            <input type="radio" name="demo" class="card-input-element d-none" value="demo2">
-                            <div class="card card-body">
-                                <div class="content_head">64GB</div>
-                                <div class="content_sub">$899,00</div>
-                            </div>
-                        </label>
-                        <label class="card-radio-btn">
-                            <input type="radio" name="demo" class="card-input-element d-none" value="demo2">
-                            <div class="card card-body">
-                                <div class="content_head">128GB</div>
-                                <div class="content_sub">$949,00</div>
-                            </div>
-                        </label>
-                        <label class="card-radio-btn">
-                            <input type="radio" name="demo" class="card-input-element d-none" value="demo2">
-                            <div class="card card-body">
-                                <div class="content_head">269GB</div>
-                                <div class="content_sub">$1049,00</div>
-                            </div>
-                        </label>
-                  </div>
-                </div>
-            </div>
+            <ul class="size-radio">
+                <li><input type="radio" id="size1" name="size"> <label for="size1">S</label></li>
+                <li><input type="radio" id="size2" name="size"> <label for="size2">M</label></li>
+                <li><input type="radio" id="size3" name="size"> <label for="size3">L</label></li>
+                <li><input type="radio" id="size4" name="size"> <label for="size4">XL</label></li>
+                <li><input type="radio" id="size5" name="size"> <label for="size5">2XL</label></li>
+                <li><input type="radio" id="size6" name="size"> <label for="size6">3XL</label></li>
+                <li><input type="radio" id="size7" name="size"> <label for="size7">4XL</label></li>
+            </ul>
 
-            <ul class="list-info">
+            <ul class="list-info mt32">
                 <li>
                     <div class="list-info__title">동반 유아(7세 이하)</div>
-                    <div class="list-info__info">- 0 +</div>
+                    <div class="list-info__info">
+                        <div class="counter">
+                            <button class="minus"><img src="../img/ico_minus.svg" alt=""></button>
+                            <span>0</span>
+                            <button class="plus"><img src="../img/ico_plus.svg" alt=""></button>
+                          </div>
+                    </div>
                 </li>
                 <li>
                     <div class="list-info__title">동반 아동(8~11세)</div>
-                    <div class="list-info__info">- 0 +</div>
+                    <div class="list-info__info">
+                        <div class="counter">
+                            <button class="minus"><img src="../img/ico_minus.svg" alt=""></button>
+                            <span>0</span>
+                            <button class="plus"><img src="../img/ico_plus.svg" alt=""></button>
+                          </div>
+                    </div>
                 </li>
             </ul>
-            <p class="note-phrase">11세 이하 어린이는 참가비가 무료입니다. 동반할 아동 인원을 신청해 주시면 행사 당일 현장에서 참여 확인 후 아동의 티셔츠가 선물로 지급됩니다.</p>
+            <p class="note-phrase mt32">11세 이하 어린이는 참가비가 무료입니다. 동반할 아동 인원을 신청해 주시면 행사 당일 현장에서 참여 확인 후 아동의 티셔츠가 선물로 지급됩니다.</p>
             <div class="hr mt48 mb56"></div>
             <div class="input-wrap__subtitle pb32">결제 수단</div>
-            <div>라디오 박스</div>
+            <ul class="payment-radio">
+                <li>
+                    <input type="radio" id="payment1" name="payment">
+                    <label for="payment1">
+                        <span>신용카드</span>
+                    </label>
+                </li>
+                <li>
+                    <input type="radio" id="payment2" name="payment">
+                    <label for="payment2">
+                        <span>계좌이체</span>
+                    </label>
+                </li>
+                <li>
+                    <input type="radio" id="payment3" name="payment">
+                    <label for="payment3">
+                        <span>무통장 입금</span>
+                    </label>
+                </li>
+            </ul>
+            <div class="text1 mt32">환불 계좌</div>
+            <p class="pt8 text2">계좌이체, 무통장 입금 결제 후 환불 시 결제 금액을 입금 받으실 계좌번호 정보를 입력해주세요.</p>
+            <div class="mt16 select-input">
+                <select name="" id="">
+                    <option value="">은행 선택</option>
+                </select>
+                <input type="text" placeholder="예금주명">
+                <input type="number" placeholder="계좌번호">
+            </div>
             <div class="hr mt48 mb56"></div>
             <div class="total-amount align both vm">
                 <strong>총 결제 금액</strong>
