--- a/html/login.html
+++ b/html/login.html
@@ -12,6 +12,7 @@
     <script src="../js/custom.js"></script>
     <script src="../js/counter.min.js"></script>
     <script src="../js/about.js"></script>
+    <script src="../js/modal.js" defer></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
@@ -21,10 +22,12 @@
     
     <div class="wrap2">
         <div class="input-wrap">
-            <!-- <p class="phrase">함께 걸어요 My5k</p> -->
             <h2>로그인</h2>
-            <a id="kakaoLogin" class="btn_main btn_kakao bg_03" >카카오로 3초만에 시작하기</a>
-            <ul>
+            <button class="ico1" id="kakao-login-btn">카카오로 시작하기</button>
+
+            <div class="bar-or line mt24"><span>또는</span></div>
+
+            <ul class="pt24">
                 <li>
                     <label class="label" for="">아이디</label>
                     <div>
@@ -43,13 +46,36 @@
                     <label for="">아이디 저장</label>
                 </div>
                 <div>
-                    <a class="link" href="#none">계정 찾기</a>
-                    <a class="link red ml24" href="#none">회원가입</a>
+                    <a class="link" href="find-account-id1.html">계정 찾기</a>
                 </div>
             </div>
-            <button class="btn-main" type="button">로그인</button>
+            <button class="btn-main2" type="button">로그인</button>
+            <button class="btn-main2 line mt12" type="button" id="btnNonmemPay">비회원 구매</button>
+            <div class="align vm center pt32">
+                <p>계정이 없으신가요?</p>
+                <a class="link red ml8" href="join.html">회원가입</a>
+            </div>
         </div>
     </div>
+
+    <div class="layer"></div>
+    <div class="alert-modal" id="alertModal1">
+        <div class="alert-modal__title">
+            구매 유형을 선택해 주세요.        
+        </div>
+        <div class="align vm mt30">
+            <button class="btn-close" type="button" onclick="location.href='apply-ticket-nonmember.html'">참가권 신청</button>
+            <button class="btn-close pink" type="button" onclick="location.href='apply-ticket-present-nonmember.html'">참가권 선물</button>
+        </div>
+    </div>
+    <!-- 로그인 정보가 일치하지 않을 경우 나타나도록 추가해야함 -->
+    <div class="alert-modal" id="alertModal2">
+        <div class="alert-modal__title">
+            로그인 정보가 일치하지 않습니다.   
+        </div>
+        <button class="btn-close" type="button">확인</button>
+    </div>
+
 </body>
 </html>
 <script>
@@ -69,4 +95,32 @@
                 elGif.setAttribute('src',`../img/about/ico_heart.svg`) 
             }
         })
+
+
+</script>
+<script>
+        Kakao.init('YOUR_APP_KEY'); // 여기에 본인의 앱 키를 입력하세요.
+        console.log(Kakao.isInitialized());
+
+        document.getElementById('kakao-login-btn').addEventListener('click', function() {
+            Kakao.Auth.login({
+                success: function(authObj) {
+                    console.log(authObj);
+
+                    // 사용자 정보 요청 (선택사항)
+                    Kakao.API.request({
+                        url: '/v2/user/me',
+                        success: function(res) {
+                            console.log(res);
+                        },
+                        fail: function(error) {
+                            console.error(error);
+                        }
+                    });
+                },
+                fail: function(err) {
+                    console.error(err);
+                }
+            });
+        });
 </script>
