--- a/html/join.html
+++ b/html/join.html
@@ -24,14 +24,24 @@
             <h2>회원가입</h2>   
             <label class="label pb8" for="txt1">아이디</label>
             <div class="input-type2">
-                <input class="input mb32" id="txt1" type="text" placeholder="이름을 입력해주세요.">
+                <!--클래스 success/ fail로 보더컬러, 텍스트컬러, 아이콘 변경 가능 
+                경고문구는 script로 제어해야할것 같습니다. -->
+                <div class="input-alert success mb32">
+                    <input class="input " id="txt1" type="text" placeholder="이름을 입력해주세요.">
+                    <div class="alert-phrase ico">사용 가능한 아이디입니다.</div>
+                </div>
                 <button type="button">중복확인</button>
             </div>
             <label class="label pb8" for="txt2">비밀번호</label>
-            <input class="input mb32" id="txt2" type="password" placeholder="6~30자 영문, 특수문자, 숫자 조합">
-            <label class="label pb8" for="txt2-2">비밀번호 확인</label>
-            <input class="input mb32" id="txt2-2" type="password" placeholder="6~30자 영문, 특수문자, 숫자 조합">
+            <div class="input-alert fail mb32">
+                <input class="input" id="txt2" type="password" placeholder="6~30자 영문, 특수문자, 숫자 조합">
+                <div class="alert-phrase ico">6~30자 영문, 특수문자, 숫자 조합으로 입력해 주세요.</div>
+            </div>
 
+            <div class="input-alert fail mb32">
+                <input class="input" id="txt2-2" type="password" placeholder="6~30자 영문, 특수문자, 숫자 조합">
+                <div class="alert-phrase ico">비밀번호가 일치하지 않습니다.</div>
+            </div>
             
             <label class="label pb8" for="txt3">이름</label>
             <input class="input mb32" id="txt3" type="text" placeholder="이름을 입력해주세요.">
@@ -56,7 +66,10 @@
                 </select>
             </div>
             <label class="label pb8 pt32" for="txt6">휴대폰 번호</label>
-            <input class="input mb32" id="txt6" type="tel" placeholder="휴대폰 번호 ‘-’ 제외하고 입력">
+            <div class="input-alert fail mb32">
+                <input class="input" id="txt6" type="tel" placeholder="휴대폰 번호 ‘-’ 제외하고 입력">
+                <div class="alert-phrase ico"> '-'를 제외한 휴대폰 번호를 입력해 주세요.</div>
+            </div>
             <label class="label pb8" for="txt7">주소</label>
             <div class="input-type2">
                 <input class="input mb8" id="txt7" type="text" placeholder="주소를 입력해주세요.">
