--- a/html/apply-ticket-present-confirm.html
+++ b/html/apply-ticket-present-confirm.html
@@ -66,7 +66,7 @@
                 신청 수량에 맞추어 현장에서 티셔츠가 선물로 지급됩니다. 유아 사이즈와 아동사이즈(XS)로 구분되오니
                 실제 나이가 아니라 티셔츠 사이즈로 신청해주시면 됩니다!              
             </p>       
-            <button class="btn-main2 mt56" type="button" id="">내용 수정</button>
+            <button class="btn-main2 mt56" type="button" onclick="location.href='apply-ticket-present-edit.html'">내용 수정</button>
             
 </body>
 </html>
