--- a/html/apply-ticket-present-edit.html
+++ b/html/apply-ticket-present-edit.html
@@ -201,21 +201,19 @@
                 <strong>60,000</strong>
             </div>
 
-            <button class="btn-main2 mt56" type="button" id="btnEdit">수정 완료</button>
+            <button class="btn-main2 mt56 btn-alert" type="button">수정 완료</button>
         </div>
     </div>
-    <div class="layer"></div>
-    <div class="alert-modal" id="alertModal1">
-        <div class="alert-modal__title">
-            참가권 신청 정보 수정이 완료되었습니다.        
-        </div>
-        <button class="btn-close" type="button" onclick="location.href='apply-ticket-present-list.html'">확인</button>
-    </div>
-
 
 </body>
 </html>
 <script>
+    document.querySelectorAll('.btn-alert').forEach(function(button) {
+        button.addEventListener('click', function() {
+            modal_type1('참가권 신청이 완료되었습니다.', '신청내역 확인', 'apply-ticket-list-detail.html');
+        });
+    });
+
     let pos2 = {y:0,y2:0,status:true},tops = 0;
     const elGif = document.querySelector('.ico-heart');
             window.addEventListener('scroll',function(){
