--- a/html/edit-meminfo.html
+++ b/html/edit-meminfo.html
@@ -63,16 +63,24 @@
             </div>
             <input class="input" type="tel" value="306호" placeholder="상세주소를 입력해주세요.">
             
-            <button class="btn-main2 mt56 btn-edit" type="button">정보 수정</button>
+            <button class="btn-main2 mt56 btn-edit btn-alert" type="button">정보 수정</button>
 
-            <div class="layer"></div>
-            <div class="alert-modal" id="alertModal1">
+            <!-- <div class="layer"></div>
+            <div class="alert-modal">
                 <div class="alert-modal__title">회원 정보 수정이 완료되었습니다.</div>
                 <button class="btn-close" type="button" onclick="location.href='mypage.html'">확인</button>
-            </div>         
+            </div>          -->
 </body>
 </html>
 <script>
+
+
+    document.querySelectorAll('.btn-alert').forEach(function(button) {
+        button.addEventListener('click', function() {
+            modal_type1('회원 정보 수정이 완료되었습니다.', '확인', 'mypage.html');
+        });
+    });
+
     let pos2 = {y:0,y2:0,status:true},tops = 0;
     const elGif = document.querySelector('.ico-heart');
             window.addEventListener('scroll',function(){
