--- a/html/mypage.html
+++ b/html/mypage.html
@@ -57,6 +57,13 @@
 </body>
 </html>
 <script>
+
+    document.querySelectorAll('.btn-alert').forEach(function(button) {
+        button.addEventListener('click', function() {
+            modal_type1('참가권 선물 신청이 완료되었습니다. <br/> 선물하고 싶은 분께 링크를 전달해 주세요.', '신청내역 확인', 'apply-ticket-present-list.html');
+        });
+    });
+
     let pos2 = {y:0,y2:0,status:true},tops = 0;
     const elGif = document.querySelector('.ico-heart');
             window.addEventListener('scroll',function(){
