apply ticket  카운터 수정
- 클래스 participant -> participant2로 수정
- counter2.js 추가

--- a/html/apply-ticket.html
+++ b/html/apply-ticket.html
@@ -12,7 +12,7 @@
     <script src="../js/custom.js"></script>
     <script src="../js/counter.min.js"></script>
     <script src="../js/about.js"></script>
-    <script src="../js/counter.js" defer></script>
+    <script src="../js/counter2.js" defer></script>
     <script src="../js/modal.js" defer></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -67,7 +67,7 @@
                 </li>
             </ul>
             <div class="hr mt56 mb32"></div>
-            <div class="participant">
+            <div class="participant2">
                 <div class="input-wrap__subtitle pb32">
                     <div class="label-title participant-title">참여자1</div>
                     <label for="agree" class="chk_box align vm">
