--- a/html/footer.html
+++ b/html/footer.html
@@ -3,14 +3,18 @@
     <div class="ft1 align both">
         <div class="align vm">
             <h1><a class="logo" href="index.html"><img src="../img/main/logo_foot.svg" alt=""></a></h1>
-            <div class="align vm ml24">
-                <p class="text1">월-금</p>
-                <p class="ml4 text2">10:00-18:00(주말, 공휴일 휴무)</p>
-                <p class="ml16 text1">점심시간</p>
-                <p class="ml4 text2">12:00-13:00</p>
+            <div class="align vm ml24 footer-align">
+                <div class="align">
+                    <p class="text1">월-금</p>
+                    <p class="ml4 text2">10:00-18:00(주말, 공휴일 휴무)</p>
+                </div>
+                <div class="align">
+                    <p class="ml16 text1">점심시간</p>
+                    <p class="ml4 text2">12:00-13:00</p>
+                </div>
             </div>
         </div>
-        <ul class="align vm list">
+        <ul class="terms-title align vm list">
             <li><a href="#none" onclick="alert('준비중입니다')">개인정보처리방침</a></li>
             <li><a href="#none" onclick="alert('준비중입니다')">이용약관</a></li>
             <li><a href="#none" onclick="alert('준비중입니다')">제휴 안내</a></li>
