--- a/html/header.html
+++ b/html/header.html
@@ -6,7 +6,7 @@
             <li class="list"><a href="#none" onclick="home();">2024 My5k</a></li>
             <li class="list"><a href="#none" onclick="notice();">유의사항</a></li>
         </ul>
-        <a class="burger-ic"><span class="material-symbols-outlined"> menu</span></a>
+        <!-- <a class="burger-ic"><span class="material-symbols-outlined"> menu</span></a> -->
         <div></div>
     <!-- </div> -->
 
